<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sam.bloodbank.BloodBankRegistration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginStart="22sp"
            android:layout_marginRight="22dp"
            android:layout_marginEnd="22sp"
            android:layout_marginLeft="22dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="ADD YOUR BLOOD BANK"
                android:textColor="#F00"
                android:layout_marginTop="30sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50sp"
                android:textColorHint="@color/com_facebook_button_login_background_color">
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    android:textColorHint="#4885ed"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:id="@+id/type"
                android:layout_marginTop="30sp"
                android:entries="@array/bank_type"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColorHint="@color/com_facebook_button_login_background_color">
                <EditText
                    android:id="@+id/contactperson"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Contact Person"
                    android:inputType="textPersonName"
                    android:textSize="15sp"
                    android:textColorHint="#4885ed"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColorHint="@color/com_facebook_button_login_background_color">
                <EditText
                    android:id="@+id/contactnumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Contact Number"
                    android:inputType="phone"
                    android:textSize="15sp"
                    android:textColorHint="#4885ed"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColorHint="@color/com_facebook_button_login_background_color">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp"
                    android:textColorHint="#4885ed"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColorHint="@color/com_facebook_button_login_background_color">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    android:textColorHint="#4885ed"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColorHint="@color/com_facebook_button_login_background_color">
                <EditText
                    android:id="@+id/confirmpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:textSize="15sp"
                    android:textColorHint="#4885ed"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColorHint="@color/com_facebook_button_login_background_color">
                <EditText
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColorHint="#4885ed"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColorHint="@color/com_facebook_button_login_background_color">
                <EditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColorHint="#4885ed"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawSelectorOnTop="true"
                android:id="@+id/state"
                android:spinnerMode="dialog"
                android:entries="@array/india_states"
                android:layout_marginTop="30sp"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20sp"
                android:textColorHint="@color/com_facebook_button_login_background_color">
                <EditText
                    android:id="@+id/locality"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Locality"
                    android:inputType="text"
                    android:textSize="15sp"
                    android:textColorHint="#4885ed"/>
            </android.support.design.widget.TextInputLayout>

            <CheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:id="@+id/terms"
                android:text="I agree to the Terms and Conditions and consent to have my contact and bank information published to the potential blood recipients."/>


            <Button
                android:id="@+id/btnsignup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30sp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30sp"
                android:background="#FF0000"
                android:textColor="#FFFFFF"
                android:text="@string/signup" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30sp"
                android:text="@string/already_a_member_login"
                android:id="@+id/tvalreadymember"
                android:gravity="center" />
        </LinearLayout>

    </ScrollView>

</RelativeLayout>
