<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sam.bloodbank.MyAccountDonor">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent"
            android:layout_marginStart="22sp"
            android:layout_marginRight="22dp"
            android:layout_marginEnd="22sp"
            android:layout_marginLeft="22dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="20sp"
                android:layout_marginTop="30sp"
                android:text="MY ACCOUNT"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="LOGIN INFORMTION"
                android:layout_marginTop="30sp"
                android:layout_gravity="center_vertical"
                android:layout_marginBottom="20sp"
                android:textColor="#FF0000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/com_facebook_button_login_background_color">
                    <EditText
                        android:id="@+id/etname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPersonName"
                        android:textColorHint="#4885ed"
                        android:textSize="15sp"
                        android:hint="@string/name"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/com_facebook_button_login_background_color">
                    <EditText
                        android:id="@+id/etemail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:inputType="textEmailAddress"
                        android:textColorHint="#4885ed"
                        android:textSize="15sp"
                        android:hint="@string/email"/>
                </android.support.design.widget.TextInputLayout>


            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="DONOR INFORMATION"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="20sp"
                android:textColor="#FF0000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/com_facebook_button_login_background_color">

                    <EditText
                        android:id="@+id/etdob"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:clickable="true"
                        android:focusable="false"
                        android:textColorHint="#4885ed"
                        android:textSize="15sp"
                        android:hint="@string/dob"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/com_facebook_button_login_background_color">
                    <EditText
                        android:id="@+id/etweight"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/weight"
                        android:textColorHint="#4885ed"
                        android:textSize="15sp"
                        android:inputType="numberSigned"/>
                </android.support.design.widget.TextInputLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:orientation="horizontal">


                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="false"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/group_array"
                    android:id="@+id/bloodgroup"/>

                <Spinner
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:id="@+id/gender"
                    android:clickable="false"
                    android:drawSelectorOnTop="true"
                    android:entries="@array/gender_array"/>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="CONTACT INFORMATION"
                android:layout_marginTop="50sp"
                android:layout_marginBottom="20sp"
                android:textColor="#FF0000"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/com_facebook_button_login_background_color">
                    <EditText
                        android:id="@+id/etnumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/phone"
                        android:inputType="number"
                        android:textSize="15sp"
                        android:textColorHint="#4885ed" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/com_facebook_button_login_background_color">
                    <EditText
                        android:id="@+id/etcity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/city"
                        android:textSize="15sp"
                        android:textColorHint="#4885ed"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/com_facebook_button_login_background_color">
                <EditText
                    android:id="@+id/etaddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:layout_marginTop="10dp"
                    android:hint="@string/address"
                    android:inputType="text"
                    android:textColorHint="#4885ed" />
            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnupdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="30dp"
                android:layout_marginStart="30sp"
                android:layout_marginRight="30dp"
                android:layout_marginEnd="30sp"
                android:background="#FF0000"
                android:textColor="#FFFFFF"
                android:text="update" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="30sp"
                android:text="Cancel"
                android:id="@+id/tvcancel"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
